--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "http-proxy",
+  "name": "nhducit-http-proxy",
   "version": "1.16.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nodejitsu/node-http-proxy.git"
+    "url": "https://github.com/nhducit/node-http-proxy.git"
   },
   "description": "HTTP proxying for the masses",
-  "author": "Charlie Robbins <charlie.robbins@gmail.com>",
-  "maintainers": [
-    "jcrugzz <jcrugzz@gmail.com>"
-  ],
   "main": "index.js",
   "dependencies": {
     "eventemitter3": "2.0.x",
